Revert "Redesign projects as numbered block cards with staggered reveal, fix typewriter visibility"
This reverts commit ca97060e038a7975b27d313807ad0ee84353eb93.

--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -58,10 +58,6 @@
   opacity: 0;
 }
 
-.hero-typewriter.visible {
-  opacity: 1;
-}
-
 .cursor {
   display: inline-block;
   margin-left: 2px;
