--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -80,11 +80,6 @@
     transform: none;
   }
 
-  .project-block {
-    opacity: 1;
-    transform: none;
-  }
-
   .skill-category {
     opacity: 1;
     transform: none;
